--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "npm": "^9.6.6",
     "vue": "^3.2.13"
