--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:server": "nodemon index.js"
   },
-  "author": "KHEANG Lymeng",
+  "author": "visal",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
