--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
